--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: postgres
     build: ./DockerFile_Postgresql
     restart: always
+    ports:
+      - 5432:5432
 
   adminer:
     image: adminer
